...
                android:id="@+id/Location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editFilterLocation"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:hint="Location"
                    android:inputType="textPersonName" />

                <ImageButton
                    android:id="@+id/btnFilterSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_search" />

            </LinearLayout>
...
